argo/wailord/traefik/ben-external-traefik/base/external-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeta-traefik
  namespace: traefik
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  externalIPs:
    - 192.168.88.88
